--- a/web/oss/package.json
+++ b/web/oss/package.json
@@ -55,6 +55,7 @@
         "@monaco-editor/react": "^4.7.0-rc.0",
         "@next/bundle-analyzer": "15.5.10",
         "@phosphor-icons/react": "^2.1.10",
+        "@reduxjs/toolkit": "^2.8.2",
         "@scalar/openapi-parser": "^0.9.0",
         "@scalar/openapi-types": "^0.1.5",
         "@tailwindcss/container-queries": "^0.1.1",
